--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ crossbeam-queue = "0.3.3"
 parking_lot = "0.12.0"
 event-listener = "2.5.2"
 futures-core = "0.3.21"
+async-std = { version = "1.9.0" }
