--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ parking_lot = "0.12.0"
 event-listener = "2.5.2"
 futures-core = "0.3.21"
 async-std = { version = "1.9.0" }
+async-trait = "0.1.52"
 futures = "0.3.21"
