--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "dsrust"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fastrand = "1.6.0"
-crossbeam-utils = "0.8.6"
-crossbeam-queue = "0.3.3"
-parking_lot = "0.12.0"
-event-listener = "2.5.2"
-futures-core = "0.3.21"
-async-std = { version = "1.9.0" }
-async-trait = "0.1.52"
-futures = "0.3.21"
+fastrand = "^1.6.0"
+crossbeam-utils = "^0.8.6"
+crossbeam-queue = "^0.3.3"
+parking_lot = "^0.12.1"
+event-listener = "^2.5.2"
+futures-core = "^0.3.21"
+async-std = { version = "^1.9.0" }
+async-trait = "^0.1.52"
+futures = "^0.3.21"
